--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vlcn-vite-starter",
+  "name": "vlcn-mobx-persist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "node ./server.js",
-    "start": "NODE_ENV=production node ./server.js",
+    "start": "node ./server.js",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
@@ -19,7 +19,13 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite-express": "^0.9.2"
+    "vite-express": "^0.9.2",
+    "mobx": "6.12.0",
+    "mobx-persist-store": "1.1.4",
+    "mobx-react": "9.1.0",
+    "semantic-ui-react": "2.1.5",
+    "axios": "1.6.5",
+    "babel-plugin-transform-semantic-ui-react-imports": "1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
